fixed spacing issue in projects

--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -54,7 +54,7 @@
   margin-top: 20%;
 }
 
-.lifecycle, .wordpress {
+.wordpress {
   img {
     margin-right: 200px;
   }
